syntax = "proto3";

message StartPointSerial { 
    uint32 x = 1;
    uint32 y = 2;
}
