syntax = "proto3";

message StartRunSerialArray { 
    // A packed combination of
    // - tail: Int8
    // - head: Int8
    // - from: UInt8
    // - to:   UInt8
    repeated uint32 contents = 1;
}
